[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/world/ring.png" type="Texture" id=1]
[ext_resource path="res://scenes/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Ring.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "collected"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=10]
resource_name = "gone"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "static"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "collected"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "gone"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "static"

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=4]
states/collected/node = SubResource( 7 )
states/collected/position = Vector2( 880, 85 )
states/gone/node = SubResource( 11 )
states/gone/position = Vector2( 1122, 194 )
states/static/node = SubResource( 3 )
states/static/position = Vector2( 589, 182 )
transitions = [ "static", "collected", SubResource( 8 ), "collected", "gone", SubResource( 12 ) ]
start_node = "static"
end_node = "gone"

[sub_resource type="AnimationNodeStateMachinePlayback" id=5]

[sub_resource type="CircleShape2D" id=9]

[sub_resource type="CircleShape2D" id=13]

[node name="Ring" type="KinematicBody2D"]
collision_layer = 1024
collision_mask = 2048
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/collected = SubResource( 6 )
anims/gone = SubResource( 10 )
anims/static = SubResource( 2 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 4 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 453, 230 )
texture = ExtResource( 1 )
hframes = 8

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_layer = 512
collision_mask = 257

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 451, 230 )
shape = SubResource( 9 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 451, 229 )
shape = SubResource( 13 )
disabled = true

[node name="DissapearanceTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Effects" type="AudioStreamPlayer2D" parent="."]

[node name="Collectable_Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="DissapearanceTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Collectable_Timer" to="." method="_on_Collectable_Timer_timeout"]

[editable path="Hitbox"]
